fixed aligntment

--- a/src/components/bubbleContainer/bubbleContainer.module.css
+++ b/src/components/bubbleContainer/bubbleContainer.module.css
@@ -3,3 +3,11 @@
     display: flex;
     flex-direction: column;
 }
+
+.BubbleContainer.StartAlign{
+    align-items: flex-start
+}
+
+.BubbleContainer.EndAlign{
+    align-items: flex-end
+}
